kubernetes_files/my-deployment-project.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-project-deployment
  labels:
    app: my-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-project
  template:
    metadata:
      labels:
        app: my-project
    spec:
      containers:
      - name: my-project 
        imagePullPolicy: Always
        image: arnaud12pi/apipredict:1.0.1
        ports:
        - containerPort: 8000
